--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
   <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
   
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
@@ -23,7 +24,7 @@
       </a>
       AI 모델학습
     </div>
-    <a href="https://boundaryx.io" class="back-button">돌아가기</a>
+    <a href="https://boundaryx.io/59" class="back-button">돌아가기</a>
   </header>
 
   <main>
